force-app/main/default/objects/TCL_Answer__c/fields/Answer_Bank__c.field-meta.xml
<CustomField>
    <fullName>Answer_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer Bank</label>
    <referenceTo>TCL_Answer_Bank__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>