force-app/main/default/objects/TCL_Answer__c/fields/Is_Answer_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Answer_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Answer Correct</label>
    <type>Checkbox</type>
</CustomField>