force-app/main/default/objects/TCL_Answer__c/fields/Is_User_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Correct__c</fullName>
    <formula>IF(  AND( User_check__c,  Is_Answer_Correct__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Correct?</label>
    <type>Checkbox</type>
</CustomField>