force-app/main/default/objects/TCL_Answer__c/fields/TCL_Question__c.field-meta.xml
<CustomField>
    <fullName>TCL_Question__c</fullName>
    <label>TCL Question</label>
    <referenceTo>TCL_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>