force-app/main/default/objects/TCL_Answer__c/fields/User_check__c.field-meta.xml
<CustomField>
    <fullName>User_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User check</label>
    <type>Checkbox</type>
</CustomField>